Added final registration form

--- a/API/wwwroot/css/PrimaryRegistrationStyle.css
+++ b/API/wwwroot/css/PrimaryRegistrationStyle.css
@@ -76,8 +76,8 @@ h1, h2 {
   margin-bottom: 10px;
 }
 
-#TopH1 {
-  margin-top: 75px;
+header {
+  margin-bottom: 75px;
 }
 
 @media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
