--- a/API/wwwroot/css/PrimaryRegistrationStyle.css
+++ b/API/wwwroot/css/PrimaryRegistrationStyle.css
@@ -6,6 +6,10 @@ table {
 }
 
 /* Zebra striping */
+h3#TopH1{
+  padding-top: 20px;
+  margin-bottom: 30px;
+}
 
 tr:nth-of-type(odd) {
   background: #f4f4f4;
@@ -16,9 +20,10 @@ tr:nth-of-type(even) {
 }
 
 th {
-  background: #782f40;
-  color: #ffffff;
-  font-weight: 300;
+  background: #d30239;
+  color: white;
+  font-weight: 600;
+  font-size: 13pt;
 }
 
 td, th {
@@ -66,7 +71,7 @@ body {
   margin-left: 0;
 }
 
-h1, h2 {
+h1, h2, h3 {
   text-align: center;
 }
 
@@ -76,9 +81,12 @@ h1, h2 {
   margin-bottom: 10px;
 }
 
-header {
-  margin-bottom: 75px;
+button[data-toggle="collapse"], button.collapsed{
+  color: #d30239;
+  font-size: 14pt;
+  font-weight: 600;
 }
+
 
 @media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
   /* Force table to not be like tables anymore */
