--- a/API/wwwroot/css/PrimaryRegistrationStyle.css
+++ b/API/wwwroot/css/PrimaryRegistrationStyle.css
@@ -82,6 +82,12 @@ h1, h2, h3 {
   margin-bottom: 10px;
 }
 
+#cancelButton {
+  margin-right: 10px;
+  margin-top: 40px;
+  margin-bottom: 10px;
+}
+
 button[data-toggle="collapse"], button.collapsed{
   color: #d30239;
   font-size: 14pt;
