when the trip is finished, you can't edit it

--- a/API/wwwroot/css/FinalRegistrationFormStyle.css
+++ b/API/wwwroot/css/FinalRegistrationFormStyle.css
@@ -87,6 +87,12 @@ h1, h2, h3 {
     margin-bottom: 10px;
 }
 
+#oneButton, #twoButton, #threeButton, #fourButton{
+    color: #d30239;
+    font-size: 14pt;
+    font-weight: 600;
+}
+
 @media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
     /* Force table to not be like tables anymore */
     table.responsive, .responsive thead, .responsive tbody, .responsive th, .responsive td, .responsive tr {
